# elikos_ros

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  frames.gv  package.xml
elikos/src/RobotDetection/: CMakeLists.txt  Detection.cpp  Detection.h  RobotDesc.cpp  RobotDesc.h  detectMain.cpp  tracking  tracking.cpp
elikos_ai/: CMakeLists.txt  README.md  package.xml
elikos_ai/cfg/: config.yaml  config_old.yaml
elikos_ai/launch/: ai.launch  simulation.launch
elikos_ai/src/ai/: Agent.cpp  Agent.h  Ai.cpp  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  Configuration.cpp  Configuration.h  MessageEmulator.cpp  MessageEmulator.h  MessageHandler.cpp  MessageHandler.h  MsgEmulator.h  main.cpp
elikos_ai/src/emulator/: CMakeLists.txt  MessageEmulator.cpp  MessageEmulator.h
elikos_control/: CMakeLists.txt  README.md  package.xml  test.sh
elikos_control/include/: CmdDefines.h
elikos_control/launch/: elikos_control.launch
elikos_control/src/elikos_control/: CmdExecutor.cpp  CmdExecutor.h  MessageHandler.cpp  MessageHandler.h  elikos_control.cpp
elikos_decisionmaking/: CMakeLists.txt  README.md  package.xml
elikos_decisionmaking/launch/: decisionmaking.launch  simulation.launch
elikos_decisionmaking/src/ai/: Agent.cpp  Agent.h  Ai.cpp  CMakeLists.txt  MessageHandler.cpp  MessageHandler.h
elikos_decisionmaking/src/emulator/: Emulator.cpp  MessageEmulator.cpp  MessageEmulator.h
elikos_detection/: CMakeLists.txt  README.md  package.xml
elikos_detection/cfg/: dnt.rviz  multicam.rviz  new_calibration.calib  pointgrey_config.yaml  r200_config.yaml  remotecalib.yaml
elikos_detection/cfg/calibrations/: Ffmv_bottem_calib.yaml  Pattern.yaml  Pattern2.yaml  back_calib_poly.yaml  bottom_calib_poly.yaml  calibrations.yaml  front_calib_poly.yaml  gazebo_bottom.yaml  gazebo_front.yaml  left_calib_poly.yaml  new_calibration.calib  right_calib_poly.yaml
elikos_detection/cfg/cameras/: elikos_ffmv_bottom.yaml  elikos_ffmv_front.yaml  elikos_hand_quad.yaml  elikos_realsense.yaml  elikos_realsense_back.yaml  elikos_realsense_front.yaml  elikos_realsense_left.yaml  elikos_realsense_right.yaml  gazebo_ffmv_bottom.yaml  gazebo_r200_back.yaml  gazebo_r200_front.yaml  gazebo_r200_left.yaml  gazebo_r200_right.yaml
elikos_detection/launch/: all_detections.launch  elikos_detection.launch  elikos_remote_calib.launch  elikos_transformation.launch  handquad_test.launch  multicam_test.launch
elikos_detection/src/detection/: MessageHandler.cpp  MessageHandler.h  dnt.cpp
elikos_detection/src/elikos_context_utils/: CameraInfo.cpp  QuadState.cpp  QuadState.h
elikos_detection/src/elikos_detection/: MessageHandler.cpp  MessageHandler.h  elikos_detection.cpp
elikos_detection/src/elikos_remotecalib/: Colors.hpp  MessageHandler.cpp  MessageHandler.h  elikos_remotecalib.cpp
elikos_detection/src/elikos_transformation/: MessageHandler.cpp  MessageHandler.h  TransformationUnit.cpp  TransformationUnit.h  elikos_transformation.cpp
elikos_detection/src/elikos_transformation_utils/: TransformationUtils.cpp  TransformationUtils.h
elikos_localization/: CMakeLists.txt  package.xml  setup.py
elikos_localization/cfg/: feature_tracking.yaml  point_cloud.rviz  ps3eye_calib.txt
elikos_localization/design/: tracking.txt
elikos_localization/include/: ArenaTracking.h  DBSCAN.h  GridFitting.h  LineIntersections.h  PosePublisher.h  PositionEstimator.h
elikos_localization/launch/: camera_param.launch  feature_tracking.launch  firefly.launch  localization.launch  localization_detection.launch  localization_sim.launch  realsense.launch  tracking.launch
elikos_localization/src/: ArenaTracking.cpp  PosePublisher.cpp
elikos_localization/src/ekf_localization/: ArenaTracking.cpp  DBSCAN.cpp  GridFitting.cpp  PositionEstimator.cpp  iarc7_localization_node.cpp
elikos_localization/src/feature_tracking/: fallback.py  (+10 more)
elikos_main/: CMakeLists.txt  README.md  Topic_Map  package.xml
elikos_main/cfg/: lpe_vision_params_07-06-017.params  lpe_vision_params_17-05-017.params  lpe_vision_params_20-06-017.params  lpe_vision_params_2017_07_15.params
elikos_main/launch/: camera1394_1.launch  camera1394_2.launch  camera1394_3.launch  cameraTrigger.launch  elikos2016.launch  elikos_decisionmaking_control.launch  elikos_drivers.launch  elikos_origin_init.launch  elikos_pointgrey_bottom.launch  elikos_px4.launch  elikos_realsense_front.launch  elikos_realsense_left.launch  elikos_realsenses.launch  elikos_software_stack.launch  elikos_transformations.launch  px4.launch  px4_config_sim.yaml  vicon.launch
elikos_main/msg/: AICmd.msg  Intersection.msg  IntersectionArray.msg  RobotRaw.msg  TargetRobotArray.msg
elikos_main/param/: .config.yaml.swp  px4_config.yaml  vo_fast.yaml
elikos_nav/: CMakeLists.txt  package.xml
elikos_nav/cfg/: flying_box.urdf.xacro
elikos_nav/launch/: nav.launch
elikos_navigation_stack/elikos_action_controller/: CMakeLists.txt  README.md  package.xml
elikos_path_planning_stack/elikos_controller_manager/: CMakeLists.txt  README.md  package.xml
elikos_path_planning_stack/elikos_path_planning/: CMakeLists.txt  README.md  package.xml
elikos_preprocessing/: CMakeLists.txt  PreProcessing.h  package.xml  preprocessing_nodelet.xml  preprocessing_nodelets.xml
elikos_preprocessing/launch/: preprocessing.launch
elikos_preprocessing/src/: Main.cpp  MessageHandler.cpp  MessageHandler.h  PreProcessing.cpp  PreProcessing.h  main.cpp
elikos_sim/: CMakeLists.txt  README.md  package.xml  setup.bash
elikos_sim/cfg/: px4_param.yaml
elikos_sim/launch/: calibration_gazebo.launch  gazebo_sim.launch  integration_sim.launch  offboard.launch  robots_sim.launch  roomba_sim.launch  roomba_sim.rviz  simulation.launch  transforms_setup.launch
elikos_tracking/: CMakeLists.txt  package.xml
elikos_tracking/launch/: elikos_tracking.launch  tracking.launch
src/ai/: AIFacade.cpp  AIFacade.h  Agent.cpp  Agent.h  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  MessageHandler.cpp  MessageHandler.h  MsgEmulator.cpp  MsgEmulator.h  ai.cpp  main.cpp
(+769 files in other folders)
