<package>
  <name>elikos_controller_manager</name>
  <version>1.5.2</version>
  <description>A generic, simple controller manager plugin for MoveIt.</description>

  <maintainer email="lajoie.py@gmail.com">PY</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <license>TODO</license>

  <build_depend>elikos_action_controller</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>elikos_msgs</build_depend>

  <run_depend>elikos_action_controller</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>elikos_msgs</run_depend>

  <export>
    <moveit_core plugin="${prefix}/elikos_controller_manager_plugin_description.xml"/>
  </export>

</package>
